--- a/src/public/index.css
+++ b/src/public/index.css
@@ -1,25 +1,47 @@
 body {
-  background-color: black;
-  font-family: 'Nanum Gothic Coding', monospace;
+  background-color: black
 }
-.app-header {
-  background-color: black;
-  color: black;
-  padding-left: 1rem;
-  margin-top: 0;
-  margin-bottom: 0;
-  font-weight: 100;
-  font-size: 1.5rem;
-  letter-spacing: 0.6rem;
+#landing-text-1 {
+  padding-top: 15rem;
+  padding-left: 10rem;
+  padding-right: 15rem;
+  margin-top: 10rem;
+  overflow: hidden;
+  border-right: .15em solid red; 
+  white-space: wrap; 
+  margin-left: 10rem;
+  margin-right: 10rem;
+  letter-spacing: .15em;
+  animation: 
+    typing 3.5s steps(40, end)
+    blink-caret 1s step-end infinite;
+  color: red;
+  font-size: 2rem;
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  font-weight: 300;
+  font-stretch: semi-condensed;
 }
-.app-name {
-  animation-name: title;
-  animation-duration: 15s;
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
 }
-
-@keyframes title {
-    0%   {color: red;}
-    25%  {color: yellow;}
-    50%  {color: blue;}
-    100% {color: black;}
+.enter-text {
+  font-family: 'IBM Plex Sans Condensed', sans-serif;
+  font-size: 2rem;
+  font-weight: 300;
+  letter-spacing: 0.5rem;
+  margin-top: 3rem;
+  padding-left: 20rem;
+  color: red;
+}
+a {
+  color: red;
+  text-decoration: none;
+}
+a:hover {
+  color: yellow;
+}
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: red; }
 }
